kratos-auth/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos-auth
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: kratos-auth
  template:
    metadata:
      labels:
        app: kratos-auth
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: kratos-auth
          image: ghcr.io/distributed-timetable-assistant/kratos-auth:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: public-assets
              mountPath: /app/public
              readOnly: true
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: public-assets
          configMap:
            name: kratos-auth-public-assets
