kratos-auth/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos-auth
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: kratos-auth
  template:
    metadata:
      labels:
        app: kratos-auth
    spec:
      containers:
        - name: kratos-auth
          image: iam-ops/kratos-auth:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: public-assets
              mountPath: /app/public
              readOnly: true
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 0m
              memory: 0Mi
      volumes:
        - name: public-assets
          configMap:
            name: kratos-auth-public-assets
