kratos-auth/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kratos-auth
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web.login.outi.ir
      secretName: kratos-auth-tls
  rules:
    - host: web.login.outi.ir
      http:
        paths:
          - path: /kratos
            pathType: Prefix
            backend:
              service:
                name: kratos-public
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kratos-auth
                port:
                  name: http
