kratos-auth/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kratos-auth
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - iam.st.dita.hasankarimi.ir
      secretName: kratos-auth-tls
  rules:
    - host: iam.st.dita.hasankarimi.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kratos-auth
                port:
                  name: http
